--- a/custom_components/anycubic_cloud/manifest.json
+++ b/custom_components/anycubic_cloud/manifest.json
@@ -10,6 +10,6 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/WaresWichall/anycubic_cloud/issues",
   "loggers": [],
-  "requirements": ["aiomqtt==2.0.1"],
+  "requirements": ["paho-mqtt==1.6.1"],
   "version": "0.0.1"
 }
