Add alt script token loader

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ __pycache__
 test_api
 custom_components/anycubic_cloud/scripts/anycubic_credentials.py
 custom_components/anycubic_cloud/scripts/*.cache
+custom_components/anycubic_cloud/scripts/*.json
