--- a/custom_components/anycubic_cloud/services.yaml
+++ b/custom_components/anycubic_cloud/services.yaml
@@ -7,8 +7,13 @@ multi_color_box_set_slot_pla: &multi_color_box_set_slot
       selector:
         config_entry:
           integration: anycubic_cloud
+    device_id: &device_id
+      required: false
+      selector:
+        device:
+          integration: anycubic_cloud
     printer_id: &printer_id
-      required: true
+      required: false
       selector:
         number:
           min: 0
@@ -66,6 +71,7 @@ multi_color_box_set_slot_pla_se: *multi_color_box_set_slot
 multi_color_box_filament_extrude:
   fields:
     config_entry: *anycubic_config_entry
+    device_id: *device_id
     printer_id: *printer_id
     box_id: *box_id
     slot_number: *slot_number
@@ -76,5 +82,6 @@ multi_color_box_filament_extrude:
 multi_color_box_filament_retract:
   fields:
     config_entry: *anycubic_config_entry
+    device_id: *device_id
     printer_id: *printer_id
     box_id: *box_id
