Add debug dump script

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ test_api
 custom_components/anycubic_cloud/scripts/anycubic_credentials.py
 custom_components/anycubic_cloud/scripts/*.cache
 custom_components/anycubic_cloud/scripts/*.json
+debug_dump.json
