Add first start print services

--- a/custom_components/anycubic_cloud/services.yaml
+++ b/custom_components/anycubic_cloud/services.yaml
@@ -85,3 +85,26 @@ multi_color_box_filament_retract:
     device_id: *device_id
     printer_id: *printer_id
     box_id: *box_id
+print_and_upload_save_in_cloud:
+  fields:
+    config_entry: *anycubic_config_entry
+    device_id: *device_id
+    printer_id: *printer_id
+    box_id: *box_id
+    slot_number: &slot_number_list
+      required: false
+      example: [1, 2]
+      selector:
+        object:
+    uploaded_gcode_file: &uploaded_gcode_file
+      required: true
+      selector:
+        file:
+print_and_upload_no_cloud_save:
+  fields:
+    config_entry: *anycubic_config_entry
+    device_id: *device_id
+    printer_id: *printer_id
+    box_id: *box_id
+    slot_number: *slot_number_list
+    uploaded_gcode_file: *uploaded_gcode_file
