--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
 __pycache__
-test_api
-custom_components/anycubic_cloud/scripts/anycubic_credentials.py
+custom_components/anycubic_cloud/frontend_panel/node_modules/
+custom_components/anycubic_cloud/frontend_panel/package-lock.json
 custom_components/anycubic_cloud/scripts/*.cache
 custom_components/anycubic_cloud/scripts/*.json
+custom_components/anycubic_cloud/scripts/anycubic_credentials.py
 debug_dump.json
+test_api
