--- a/custom_components/anycubic_cloud/manifest.json
+++ b/custom_components/anycubic_cloud/manifest.json
@@ -5,7 +5,11 @@
     "@WaresWichall"
   ],
   "config_flow": true,
-  "dependencies": [],
+  "dependencies": [
+    "file_upload",
+    "http",
+    "panel_custom"
+  ],
   "documentation": "https://www.home-assistant.io/integrations/anycubic_cloud",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/WaresWichall/anycubic_cloud/issues",
