--- a/custom_components/anycubic_cloud/frontend_panel/package.json
+++ b/custom_components/anycubic_cloud/frontend_panel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hass-anycubic-cloud-panel",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "anycubic panel for hass",
   "main": "src/index.ts",
   "scripts": {
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.24.7",
     "@eslint/js": "^9.7.0",
+    "@mdi/js": "^7.4.47",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-json": "^6.1.0",
