--- a/custom_components/anycubic_cloud/frontend_panel/package.json
+++ b/custom_components/anycubic_cloud/frontend_panel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hass-anycubic-cloud-panel",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "anycubic panel for hass",
   "main": "src/index.ts",
   "scripts": {
@@ -18,6 +18,8 @@
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.24.7",
     "@eslint/js": "^9.7.0",
+    "@lit-labs/motion": "^1.0.7",
+    "@lit-labs/observers": "^2.0.2",
     "@mdi/js": "^7.4.47",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -34,6 +36,7 @@
     "home-assistant-js-websocket": "^9.4.0",
     "intl-messageformat": "^10.5.14",
     "lit": "^3.1.4",
+    "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "rollup": "^2.79.1",
     "typescript": "^5.5.4",
