--- a/custom_components/anycubic_cloud/frontend_panel/package.json
+++ b/custom_components/anycubic_cloud/frontend_panel/package.json
@@ -10,7 +10,7 @@
     "rollup_card": "rollup -c rollup.config-card.mjs",
     "babel": "./node_modules/.bin/babel dist/anycubic-cloud-panel.js --out-file dist/anycubic-cloud-panel.js",
     "babel_card": "./node_modules/.bin/babel dist/anycubic-card.js --out-file dist/anycubic-card.js",
-    "lint": "eslint src --fix",
+    "lint": "eslint src --fix -c .eslintrc.js --ignore-pattern src/lib",
     "prettier": "prettier src/components/**/*.ts --write",
     "start": "rollup -c --watch"
   },
@@ -40,6 +40,7 @@
     "home-assistant-js-websocket": "^9.4.0",
     "intl-messageformat": "^10.5.14",
     "lit": "^3.1.4",
+    "modern-color": "^1.1.3",
     "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "rollup": "^2.79.1",
