Add project image preview entity

--- a/custom_components/anycubic_cloud/manifest.json
+++ b/custom_components/anycubic_cloud/manifest.json
@@ -8,6 +8,7 @@
   "dependencies": [
     "file_upload",
     "http",
+    "image",
     "panel_custom"
   ],
   "documentation": "https://www.home-assistant.io/integrations/anycubic_cloud",
