--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,15 @@ exclude = '''
 '''
 
 [tool.isort]
-line_length = 90
+line_length = 135
 multi_line_output = 3
+force_grid_wrap = 3
 include_trailing_comma = true
 use_parentheses = true
 ensure_newline_before_comments = true
 combine_as_imports = true
 filter_files = true
 conda_env = "base"
-skip = ["alembic", "includes", "setup.py"]
+skip = []
 group_by_package = true
 sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
