General frontend refactoring for render optimisations and type checking throughout

--- a/custom_components/anycubic_cloud/frontend_panel/package.json
+++ b/custom_components/anycubic_cloud/frontend_panel/package.json
@@ -4,13 +4,17 @@
   "description": "anycubic panel for hass",
   "main": "src/index.ts",
   "scripts": {
+    "check-types": "tsc --noemit",
     "build": "npm run lint && npm run rollup && npm run babel",
+    "build:quick": "npm run rollup && npm run babel",
     "build_card": "npm run lint && npm run rollup_card && npm run babel_card",
+    "build_card:quick": "npm run rollup_card && npm run babel_card",
     "rollup": "rollup -c",
     "rollup_card": "rollup -c rollup.config-card.mjs",
     "babel": "./node_modules/.bin/babel dist/anycubic-cloud-panel.js --out-file dist/anycubic-cloud-panel.js",
     "babel_card": "./node_modules/.bin/babel dist/anycubic-card.js --out-file dist/anycubic-card.js",
-    "lint": "eslint src --fix -c .eslintrc.js --ignore-pattern src/lib",
+    "eslint": "eslint src --fix -c .eslintrc.js --ignore-pattern src/lib",
+    "lint": "npm run eslint && npm run check-types",
     "prettier": "prettier src/components/**/*.ts --write",
     "start": "rollup -c --watch"
   },
@@ -35,6 +39,8 @@
     "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lit": "^1.14.0",
     "eslint-plugin-prettier": "^5.2.1",
     "home-assistant-js-websocket": "^9.4.0",
