--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,37 +1,51 @@
 repos:
--   repo: https://github.com/pre-commit/mirrors-autopep8
+  - repo: https://github.com/pre-commit/mirrors-autopep8
     rev: v2.0.4
     hooks:
-    - id: autopep8
-      args:
-        - "--global-config"
-        - ".flake8"
-      types: ['file']
-      files: \.(py|pyx|pxd)$
--   repo: https://github.com/pre-commit/pre-commit-hooks
+      - id: autopep8
+        args:
+          - "--global-config"
+          - ".flake8"
+        types: ['file']
+        files: \.(py|pyx|pxd)$
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    - id: flake8
-      types: ['file']
-      files: \.(py|pyx|pxd)$
--   repo: https://github.com/pre-commit/mirrors-mypy
+      - id: flake8
+        types: ['file']
+        files: \.(py|pyx|pxd)$
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.11.2'
     hooks:
-    - id: mypy
-      exclude: ^custom_components/anycubic_cloud/test_api/
-      files: custom_components/
-      args:
-        - "--strict"
-        - "--config-file=mypy.ini"
-      additional_dependencies:
-        - "homeassistant==2024.9.3"
-        - "pydantic==2.9.2"
-        - "aiofiles==24.1.0"
-        - "types-aiofiles==24.1.0.20240626"
-        - "types-paho-mqtt==1.6.0.20240321"
--   repo: https://github.com/pycqa/isort
+      - id: mypy
+        exclude: ^custom_components/anycubic_cloud/test_api/
+        files: custom_components/
+        args:
+          - "--strict"
+          - "--config-file=mypy.ini"
+        additional_dependencies:
+          - "homeassistant==2024.9.3"
+          - "pydantic==2.9.2"
+          - "aiofiles==24.1.0"
+          - "types-aiofiles==24.1.0.20240626"
+          - "types-paho-mqtt==1.6.0.20240321"
+  - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
         files: "\\.(py)$"
         args: [--settings-path=pyproject.toml]
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v8.56.0
+    hooks:
+      - id: eslint
+        always_run: true
+        pass_filenames: false
+        files: \.(ts|js)$
+        args:
+          - "--fix"
+          - "custom_components/anycubic_cloud/frontend_panel/src"
+          - "-c"
+          - "custom_components/anycubic_cloud/frontend_panel/.eslintrc.js"
+          - "--ignore-pattern"
+          - "custom_components/anycubic_cloud/frontend_panel/src/lib"
