--- a/custom_components/anycubic_cloud/frontend_panel/tsconfig.json
+++ b/custom_components/anycubic_cloud/frontend_panel/tsconfig.json
@@ -18,6 +18,7 @@
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
     "experimentalDecorators": true,
+    "useDefineForClassFields": false,
     "strictPropertyInitialization": false,
     "allowSyntheticDefaultImports": true
   }
