--- a/custom_components/anycubic_cloud/frontend_panel/package.json
+++ b/custom_components/anycubic_cloud/frontend_panel/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.24.9",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@date-fns/utc": "^2.1.0",
     "@eslint/js": "^9.7.0",
     "@lit-labs/motion": "^1.0.7",
     "@lit-labs/observers": "^2.0.2",
@@ -37,6 +38,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
+    "date-fns": "^4.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -47,7 +49,6 @@
     "intl-messageformat": "^10.5.14",
     "lit": "^3.1.4",
     "modern-color": "^1.1.3",
-    "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "rollup": "^2.79.1",
     "typescript": "^5.5.4",
